2005-08-15  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/pxlmono.xml, driver/pxl1010.xml, driver/lj5gray.xml:
	  Fixed Perl one-liner to select the paper tray. It inserted the
	  paper tray code also in wrong places and so broke the
	  data. Thanks to Jonathan Kamens (jik at kamens dot brookline dot
	  ma dot us) for the patch.

2005-08-04  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/capt.xml, printer/Canon-LBP-810.xml,
	  printer/Canon-LBP-1120.xml: Added the CAPT winprinters Canon
	  LBP-810 and LPB-1120. Added the "capt" driver for these
	  printers.

2005-08-01  George Liu <george.liu@ussj.ricoh.com>

	* driver/pxlmono.xml
	  printer/Gestetner-10512.xml
	  printer/Gestetner-2212.xml
	  printer/Gestetner-2712.xml
	  printer/Gestetner-3212.xml
	  printer/Gestetner-3502.xml
	  printer/Gestetner-3532_4235g.xml
	  printer/Gestetner-4502.xml
	  printer/Gestetner-4532_4245g.xml
	  printer/Gestetner-6002.xml
	  printer/Gestetner-7502.xml
	  printer/Gestetner-9002.xml
	  printer/Gestetner-DSm415.xml
	  printer/Gestetner-DSm615.xml
	  printer/Gestetner-DSm618d.xml
	  printer/Gestetner-DSm618.xml
	  printer/Gestetner-DSm622.xml
	  printer/Gestetner-DSm627.xml
	  printer/Gestetner-DSm635_635G.xml
	  printer/Gestetner-DSm645_645G.xml
	  printer/Gestetner-DSm651.xml
	  printer/Gestetner-DSm660.xml
	  printer/Gestetner-DSm675.xml
	  printer/Infotec-4353_MF.xml
	  printer/Infotec-4452_MF.xml
	  printer/Infotec-IS_2015.xml
	  printer/Infotec-IS_2018D.xml
	  printer/Infotec-IS_2018.xml
	  printer/Infotec-IS2022.xml
	  printer/Infotec-IS2027.xml
	  printer/Infotec-IS2032.xml
	  printer/Infotec-IS2035.xml
	  printer/Infotec-IS2045.xml
	  printer/Infotec-IS_2060.xml
	  printer/Infotec-IS_2075.xml
	  printer/Infotec-IS2090.xml
	  printer/Infotec-IS2105.xml
	  printer/Infotec-IS_2122.xml
	  printer/Infotec-IS_2127.xml
	  printer/Infotec-IS_2132.xml
	  printer/Infotec-IS_2135.xml
	  printer/Infotec-IS_2145.xml
	  printer/Infotec-IS_2151.xml
	  printer/Infotec-IS_2160.xml