@@ -16,7 +16,7 @@
    <arg_proto> -sDEVICE=%s</arg_proto>
   </arg_execution>
   <constraints>
-     <constraint sense="true">
+     <constraint sense="false">
       <driver>ljet4</driver>
       <arg_defval>ev/153</arg_defval>
      </constraint>
