@@ -380,6 +380,10 @@
       <arg_defval>ev/1</arg_defval>
      </constraint>
      <constraint sense="true">
+      <driver>lj4dith</driver>
+      <arg_defval>ev/1</arg_defval>
+     </constraint>
+     <constraint sense="true">
       <driver>ljet3d</driver>
       <arg_defval>ev/1</arg_defval>
      </constraint>
