@@ -334,6 +334,10 @@
       <arg_defval>ev/129</arg_defval>
      </constraint>
      <constraint sense="true">
+      <driver>lj4dith</driver>
+      <arg_defval>ev/129</arg_defval>
+     </constraint>
+     <constraint sense="true">
       <driver>ljet4d</driver>
       <arg_defval>ev/129</arg_defval>
      </constraint>
