@@ -34,6 +34,10 @@
       <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
      <constraint sense="true">
+      <driver>lj4dith</driver>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
+     </constraint>
+     <constraint sense="true">
       <driver>ljet4d</driver>
       <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
