@@ -21,6 +21,10 @@
       <arg_defval>ev/PCL-4-5-InputSlot-Default</arg_defval>
      </constraint>
      <constraint sense="true">
+      <driver>lj4dith</driver>
+      <arg_defval>ev/PCL-4-5-InputSlot-Default</arg_defval>
+     </constraint>
+     <constraint sense="true">
       <driver>ljet4d</driver>
       <arg_defval>ev/PCL-4-5-InputSlot-Default</arg_defval>
      </constraint>
