@@ -51,7 +51,7 @@
     Adam (madaman at web dot de) reports on the HP forum on
     linuxprinting.org that the HP LaserJet 1010 works for him with all
     raster drivers for the HP LaserJet 1100 ("hpijs",
-    "ljet4"/"lj4dith", "gimp-print"). Adam tried also PCL-6 drivers
+    "ljet4", "lj4dith", "gimp-print"). Adam tried also PCL-6 drivers
     ("lj5gray"/"lj5mono", "pxlmono") but without success.&lt;p&gt;
 
     Unfortunately, the new LaserJet 1010/1012 series seems not to
