@@ -40,8 +40,8 @@
     LaserJet 5 family (as with most &quot;L&quot; printers from
     HP). For example it does not work with the
     &quot;lj5gray&quot;/&quot;lj5mono&quot; drivers but only with the
-    &quot;ljet4&quot;/&quot;lj4dith&quot; drivers (and
-    Gimp-Print).&lt;p&gt;
+    &quot;ljet4&quot; or &quot;lj4dith&quot; drivers (and
+    Gimp-Print or HPIJS).&lt;p&gt;
 
     Getting more RAM is highly recommended; with only the standard
     1Meg you may be unable to print some jobs. It is recommended to
