@@ -38,8 +38,8 @@
 
     Reported not to work with the
     &quot;lj5gray&quot;/&quot;lj5mono&quot; drivers, use the
-    &quot;ljet4&quot;/&quot;lj4dith&quot; drivers (or Gimp-Print)
-    instead.&lt;p&gt;
+    &quot;ljet4&quot; or &quot;lj4dith&quot; drivers (or Gimp-Print or
+    HPIJS) instead.&lt;p&gt;
 
     This printer seems to be more similar to the HP LaserJet 5L than
     to the other printers in the LaserJet 5 series.
