@@ -37,7 +37,7 @@
     LaserJet 6 family (as with most &quot;L&quot; printers from
     HP). For example it does not work with the
     &quot;lj5gray&quot;/&quot;lj5mono&quot; drivers but only with the
-    &quot;ljet4&quot;/&quot;lj4dith&quot; drivers (and
+    &quot;ljet4&quot; or &quot;lj4dith&quot; drivers (and
     also Gimp-Print and HPIJS).&lt;p&gt;
 
     The layout is off center and slightly rotated when using
