@@ -1,3 +1,11 @@
+2005-08-24  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/ljet4.xml, driver/lj4dith.xml, opt/12.xml, opt/2.xml,
+	  opt/6.xml, opt/GS-HalftoningAlgorithm-Gray.xml,
+	  opt/PCL-4-5-InputSlot.xml: Separated the "ljet4" and "lj4dith"
+	  drivers from each other (not one PPD for both any more), as
+	  "lj4dith" has a margin problem.
+
 2005-08-15  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/pxlmono.xml, driver/pxl1010.xml, driver/lj5gray.xml:
